# zkscripts-automatic-clip-maker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agents.md  gameplay_pipeline_v1.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: defaults.json
config/config/: defaults.json
docs/: deployment_readme.md  release_checklist.md  status.md
docs/docs/: deployment_readme.md  packaging.md  release_checklist.md  status.md
packaging/: gameplay_pipeline.spec
scripts/: build_exe.ps1
scripts/scripts/: run_analysis.ps1  setup_env.ps1
src/: __init__.py  main.py
src/gameplay_pipeline/: analysis.py  cache.py  cli.py  config.py  exporter.py  ffmpeg_tools.py  logging_utils.py  models.py  reporting.py  utils.py
src/src/gameplay_pipeline/: analysis.py  cli.py  config.py  models.py  reporting.py  runtime_paths.py
