[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gameplay-highlight-pipeline"
version = "0.1.0"
description = "Local-first Windows tooling for gameplay highlight analysis and optional fight clip export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "scenedetect>=0.6.4,<0.7",
  "opencv-python>=4.10,<5",
]
authors = [
  { name = "Chance Wrobel" },
]
keywords = ["gameplay", "ffmpeg", "highlights", "video", "windows", "davinci-resolve"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src", "src.*"]
